fix layout of the view pages

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -327,6 +327,9 @@ body{
   .allrights{
     margin-top: 20px;
   }
+  .task-cont h2{
+    font-size: 26px;
+  }
 }
 
 @media screen and (max-width: 480px){
